# Tessera

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SUBMODULE_PLAN.md  readme.md  spec.md
docs/: foundation.md
legacy/: analysis.rs  diagnostics.rs  graph.rs  internal.rs  pattern.rs  piece.rs  piece_registry.rs  types.rs
legacy/ops/: apply.rs  pruning.rs  tests.rs  validation.rs
legacy/semantic/: input_resolution.rs  mod.rs  tests.rs  type_inference.rs  validation.rs
legacy/subgraph/: analysis.rs  helpers.rs  pieces.rs  tests.rs  types.rs
src/: activity.rs  analysis.rs  ast.rs  backend.rs  code_expr.rs  compiler.rs  core_pieces.rs  diagnostics.rs  graph.rs  host.rs  internal.rs  lib.rs  ops.rs  piece.rs  piece_registry.rs  semantic.rs  subgraph.rs  types.rs
src/application/: compile_container.rs  compile_flow_control.rs  compile_program.rs  compile_transform.rs  flow_policy.rs  mod.rs  normalize.rs  resolve_spatial_program.rs  stream_shape.rs  validate.rs  validate_root_graph.rs  validate_surface.rs
src/ast/: mod.rs  opt.rs
src/domain/: atom.rs  container.rs  diagnostics.rs  flow.rs  mod.rs  pattern_ir.rs  program.rs  relations.rs  spatial_defaults.rs  surface.rs
src/infrastructure/: authored_program_ext.rs  builder.rs  compiler.rs  mod.rs  ports.rs  program_ext.rs  reports.rs  spatial.rs  stack.rs
src/ops/: apply.rs  auto_wire.rs  mod.rs  tests.rs  types.rs
src/semantic/: mod.rs  tests.rs  topo_sort.rs
src/subgraph/: analysis.rs  helpers.rs  mod.rs  (+3 more)
tests/: graph_public_api_contract.rs  host_handoff_contract.rs  spatial_resolution_contract.rs
