[package]
name = "tessera"
version = "0.3.0"
authors = ["AlexMonte <alexmonte@outlook.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = ["spatial", "builders"]
spatial = []
builders = []
graph = []
serde = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
